--- a/Thesis.tex
+++ b/Thesis.tex
@@ -120,7 +120,7 @@
 \usepackage{mathtools}
 \usepackage{makecell}
 %\usepackage{enumerate}
-%\usepackage{float}
+\usepackage{float}
 %\usepackage{algpseudocode}
 %\usepackage{algorithm}
 \usepackage{verbatim}
@@ -130,13 +130,12 @@
 \usepackage{chngcntr}
 \usepackage{amsthm}
 \usepackage{latexsym}
-\usepackage{subfig}
 \usepackage{pifont}
+\usepackage{subfig}
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{adjustbox} 
 \usepackage{rotating}
-\usepackage{subcaption}
 %\captionsetup{compatibility=false}
 \usepackage{bibentry}
 \usepackage{mathtools}
@@ -169,6 +168,9 @@
 \newcolumntype{R}[1]{>{\PreserveBackslash\raggedleft}p{#1}}
 \newcolumntype{L}[1]{>{\PreserveBackslash\raggedright}p{#1}}
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+
+
+\newcommand\extralabel[2]{{\edef\@currentlabel{\@currentlabel#2}\label{#1}}}
 
 %%<ALVARO>
 \newcommand*\rot{\rotatebox{75}}
@@ -569,15 +571,15 @@ EL PRESIDENTE \hspace{30mm} VOCAL 1 \hspace{30mm} VOCAL 2
 %-#####-> End uncomment
 
 
-%\input{1_introduction/introduction}
+\input{1_introduction/introduction}
 
 %\input{2_theoreticalbackground/theoreticalbackground}
 
 \input{3_stateoftheart/stateofart}
 
-% \input{3_objectives/objectives}
+%\input{3_objectives/objectives}
 
-%\input{5_kbsintegrationdl/kbsintegrationdl}
+%\input{4_kbsintegrationdl/kbsintegrationdl}
 
 %\input{5_dlintegrationkbs/dlintegrationkbs}
 
