--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -3882,7 +3882,7 @@ keywords = "Knowledge representation, Multi-source, Textual information",
 	language = {English},
 	number = {9},
 	journal = {Applied Intelligence},
-	author = {van Bekkum, M. and de Boer, M. and van Harmelen, F. and Meyer-Vitali, A. and Teije, A.},
+	author = {Van Bekkum, M. and de Boer, M. and van Harmelen, F. and Meyer-Vitali, A. and Teije, A.},
 	year = {2021},
 	keywords = {Design patterns, Neuro-symbolic systems},
 	pages = {6528--6546},
